--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "write:component": "plop",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
-    "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production build-storybook",
     "prepare": "husky install",
     "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
     "cem": "cem analyze --litelement ",
-    "e2e-test": "node cypress/scripts/run_all.js & cypress open"
+    "e2e-test": "node cypress/scripts/run_all.js & cypress open",
+    "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development storybook dev -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
+    "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production storybook build",
+    "trial-sb": "storybook dev",
+    "trial-sb-build": "storybook build"
   },
   "author": "GovTechSG",
   "contributors": [
@@ -55,25 +57,21 @@
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.21.4",
     "@babel/register": "^7.21.0",
+    "@chromatic-com/storybook": "^1.6.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@custom-elements-manifest/analyzer": "^0.6.4",
     "@esm-bundle/chai": "^4.3.4-fix.0",
-    "@mdx-js/react": "^1.6.22",
     "@open-wc/testing": "^3.0.0-next.5",
     "@playwright/test": "1.45.1",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^5.0.0",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-controls": "^6.5.16",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/theming": "^7.6.7",
-    "@storybook/web-components": "^6.5.16",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/blocks": "^8.2.6",
+    "@storybook/test": "^8.2.6",
+    "@storybook/web-components": "^8.2.6",
+    "@storybook/web-components-vite": "^8.2.6",
     "@types/bootstrap": "^5.2.6",
     "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -81,13 +79,11 @@
     "@web/dev-server": "^0.1.17",
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/dev-server-rollup": "^0.3.19",
-    "@web/dev-server-storybook": "^0.5.4",
     "@web/test-runner": "^0.17.1",
     "@web/test-runner-commands": "^0.6.5",
     "@web/test-runner-playwright": "^0.8.10",
     "@webcomponents/scoped-custom-element-registry": "^0.0.9",
-    "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
+    "autoprefixer": "^10.4.19",
     "cem-plugin-better-lit-types": "^0.2.0",
     "cypress": "^13.6.0",
     "cypress-fail-on-console-error": "^5.0.3",
@@ -101,6 +97,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-wc": "^1.4.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -111,6 +108,7 @@
     "plop": "^3.1.2",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
+    "remark-gfm": "^4.0.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
@@ -121,19 +119,13 @@
     "sass": "~1.49.9",
     "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
+    "storybook": "^8.2.6",
     "typescript": "^5.0.4",
     "vite": "^4.4.9"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "overrides": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "@storybook/addon-docs": {
-      "@mdx-js/react": "1.6.22"
     }
   }
 }
