--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
   "dependencies": {
     "@govtechsg/sgds": "^2.3.2",
     "@lit-labs/react": "^1.0.9",
-    "@open-wc/scoped-elements": "2.2.0",
+    "@open-wc/scoped-elements": "^2.2.0",
     "@storybook/addon-a11y": "^8.2.8",
     "bootstrap": "^5.1.3",
     "date-fns": "^3.3.1",
     "imask": "^7.4.0",
     "lit": "^3.1.4",
+    "lit-element": "^4.1.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
