--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
   "license": "MIT",
   "dependencies": {
     "@govtechsg/sgds": "^2.3.2",
+    "@govtechsg/sgds-web-component": "^2.0.0",
     "@lit-labs/react": "^1.0.9",
-    "@open-wc/scoped-elements": "^2.2.0",
+    "@open-wc/scoped-elements": "^3.0.5",
+    "@open-wc/testing-helpers": "^3.0.1",
     "@storybook/addon-a11y": "^8.2.8",
     "bootstrap": "^5.1.3",
     "date-fns": "^3.3.1",
