--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^2.1.0",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "rollup-plugin-typescript2": "^0.33.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "~1.49.9",
