--- a/.github/workflows/sync-to-gist.yml
+++ b/.github/workflows/sync-to-gist.yml
@@ -15,4 +15,4 @@ jobs:
           with:
             gist_token: ${{ secrets.GIST_TOKEN }}
             gist_id: 425e29332ec837d9ea4bbe90ff8d4a37
-            source_path: ./src/themes
+            source_path: src/themes
