--- a/.github/workflows/sync-to-gist.yml
+++ b/.github/workflows/sync-to-gist.yml
@@ -1,4 +1,4 @@
-name: Sync to Gist
+name: Sync to Lu Khei's Gist
 on:
   push:
     branches:
@@ -16,3 +16,14 @@ jobs:
             gist_token: ${{ secrets.GIST_TOKEN }}
             gist_id: 425e29332ec837d9ea4bbe90ff8d4a37
             source_path: src/themes
+  CSS-Gist:
+    runs-on: ubuntu-latest
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - name: Gist Repo Sync
+          uses: pentatonicfunk/action-gist-repo-sync@v1.8
+          with:
+            gist_token: ${{ secrets.GIST_TOKEN }}
+            gist_id: a31bfc0ea0c2b87d950b125f92835a76
+            source_path: src/css
