--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "license": "MIT",
   "dependencies": {
     "@govtechsg/sgds": "^2.3.2",
+    "@lit/context": "^1.1.3",
     "@lit/react": "^1.0.6",
     "@open-wc/scoped-elements": "2.2.0",
     "@storybook/addon-a11y": "^8.2.8",
